--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ h1 {
             </ul>
         </section>
 
-        <section>
+<section>
             <h2>Protecting Overseas Filipino Workers (OFWs)</h2>
             <p>Duterte made strong statements regarding the protection of OFWs, particularly in Kuwait. He once said:</p>
             <blockquote>
@@ -160,6 +160,12 @@ h1 {
                 "We are poor, we may need your help, but we will not do it at the expense of the dignity of the Filipino."
             </blockquote>
             <p>Kuwait initially expressed concern over Duterte's remarks and the temporary ban on OFW deployment. Tensions escalated after a controversial rescue operation by the Philippine Embassy, leading to the expulsion of the Philippine Ambassador. However, both nations eventually resolved the conflict by signing a bilateral labor agreement in 2018. This agreement included provisions for better working conditions, such as guaranteed rest days and the right to keep personal documents. Learn more about this resolution <a href="https://www.aljazeera.com/news/2018/5/11/philippines-kuwait-sign-deal-to-protect-overseas-workers">here</a>.</p>
+
+        <p>One of the most tragic cases during Duterte's term was the story of <strong>Joanna Demafelis</strong>, an OFW whose body was found in a freezer in Kuwait in 2018. Her death led to a temporary ban on deploying Filipino workers to Kuwait and the repatriation of many distressed workers.</p>
+        <p>Duterte called the incident a "national shame" and emphasized the dignity of Filipino workers, stating:</p>
+        <blockquote>"We are poor, we may need your help, but we will not do it at the expense of the dignity of the Filipino."</blockquote>
+        <p>This tragedy eventually led to the signing of a <a href="https://en.wikipedia.org/wiki/2018_Kuwait%E2%80%93Philippines_diplomatic_crisis" target="_blank">bilateral labor agreement</a> in 2018 to improve working conditions for Filipinos in Kuwait.</p>
+   
         </section>
 
         <section>
