--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
             <h2>Introduction</h2>
             <p>Rodrigo Roa Duterte, also known as PRRD, served as the 16th President of the Philippines from 2016 to 2022. His administration is noted for several achievements that have had a significant impact on the country. Below, we explore his accomplishments and the controversies surrounding his leadership.</p>
         </section>
+
+        <section>
+<h2>Latest Update</h2>
+            <article>
+           
+                <p>Former Philippine President Rodrigo Duterte was recently arrested on March 11, 2025, at Manila's Ninoy Aquino International Airport. This arrest was carried out under a warrant issued by the International Criminal Court (ICC) for alleged crimes against humanity. The charges stem from Duterte's controversial "war on drugs," which began during his presidency in 2016 and reportedly resulted in thousands of extrajudicial killings.<br><br>
+
+
+The ICC's investigation covers incidents from 2011, when Duterte was mayor of Davao City, to 2019, when the Philippines withdrew from the ICC's founding treaty, the Rome Statute. Despite the withdrawal, the ICC retains jurisdiction over crimes committed before the withdrawal took effect.<br><br>
+
+
+Duterte was taken into custody upon his return from Hong Kong and later transported to The Hague, Netherlands, where the ICC is headquartered. The arrest has sparked significant reactions, with human rights groups hailing it as a step toward justice, while Duterte's allies argue that the ICC lacks jurisdiction over the Philippines.<br>
+
+This development is seen as a landmark moment for international law and accountability. <br><br>
+
+</p>
+            </article>
+        </section>
+        <section>
+
         <section>
             <h2>Key Achievements</h2>
             <article>
