--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <section>
 <h2>Latest Update</h2>
             <article>
+
+    <p>
+        Commentary: Did Duterte Outsmart PNP, Marcos Administration? 
+        <a href="Master Strategist.html" target="_blank">Click here to read more</a>.
+    </p><br><br>
+
            
                 <p>Former Philippine President Rodrigo Duterte was recently arrested on March 11, 2025, at Manila's Ninoy Aquino International Airport. This arrest was carried out under a warrant issued by the International Criminal Court (ICC) for alleged crimes against humanity. The charges stem from Duterte's controversial "war on drugs," which began during his presidency in 2016 and reportedly resulted in thousands of extrajudicial killings.<br><br>
 
